# CTF-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/scripts/: check_schedule_health.py
.github/workflows/: monitor-ctf-schedule.yml  update-ctf-db.yml
ctf_bot/: __init__.py  api_clients.py  bot.py  config.py  dedupe.py  formatters.py  models.py  notifier.py  storage.py  updater.py
data/: ctf_snapshot.db
